# TATLIN_Test_Task

./: CMakeLists.txt  README.md  config.json
include/: config.hpp  fileTape.hpp  interfaceTape.hpp  sorterTape.hpp
src/: fileTape.cpp  main.cpp  sorterTape.cpp
tests/: CMakeLists.txt  smoke_test.cpp  test_utility.hpp
